--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -1,1 +1,5 @@
-<p style="border: solid green; padding: 10px; margin: 10px;" >Aqui Iria un Empleado</p>
+<p style="border: solid green; padding: 10px; margin: 10px;" >
+    Nombre: {{getNombre()}} {{getApellido()}} <br>
+    Edad: {{getEdad()>18 ? "Menor de Edad" : "Mayor de Edad"}} <br>
+    Empresa: {{getEmpresa()}}
+</p>
